# tema2-lfc-REGEX-AFD

./: CMakeLists.txt  DeterministicFiniteAutomaton.cpp  DeterministicFiniteAutomaton.h  FiniteAutomaton.cpp  FiniteAutomaton.h  UsefulMethods.cpp  UsefulMethods.h  expresii_regulate.txt  main.cpp
